remove arm64 build

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Build and Push RCE Image
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
           push: true
           tags: vineelsai/rce:latest
