--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,12 @@ updates:
       - "vineelsai26"
     commit-message:
       prefix: "gomod"
+      
+  - package-ecosystem: "github-actions" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "weekly"
+    assignees: 
+      - "vineelsai26"
+    commit-message:
+      prefix: "github-actions"
