--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -8,17 +8,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Check out
         uses: actions/checkout@v3
-          
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        
+
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -29,6 +29,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64
+          platforms: linux/amd64, linux/arm64
           push: true
           tags: ghcr.io/vineelsai26/rce:latest
