--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,12 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: "Build"
       run: |
         # Linux AMD64
@@ -26,6 +32,19 @@ jobs:
         # Linux ARM64
         env GOOS=linux GOARCH=arm64 go build
         tar -czvf rce-linux-arm64.tar.gz rce
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Build and Push RCE Image
+      uses: docker/build-push-action@v3
+      with:
+        platforms: linux/amd64, linux/arm64
+        push: true
+        tags: vineelsai/rce:latest, vineelsai/rce:${{ github.ref_name }}
 
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
