--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,20 @@ jobs:
       with:
         go-version: 1.21
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+    - name: Build RCE Docker image
+      uses: docker/build-push-action@v5
+      with:
+        platforms: linux/amd64, linux/arm64
+        push: false
