--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Docker Setup for MacOS
         if: matrix.os == 'macos-latest'
         run: |
-          brew install docker
+          brew install docker colima
           colima start
 
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
