--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -93,7 +93,7 @@ jobs:
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.RELEASE_TOKEN }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
             *.tar.gz
